--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header style="text-align: center;">
-        <h1 >Este es mi portafolio web</h1>
+        <h1 >Este es mi Portafolio web</h1>
         <nav>
             <img width="50px" src="./61100317.jpeg" alt="mi foto">
             <ul>
